# codesync

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: package-release.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  bundle.rs  claude_sessions.rs  cli_menu.rs  error.rs  family.rs  fs_ops.rs  history.rs  lib.rs  logs_db.rs  main.rs  models.rs  opencode_sessions.rs  paths.rs  repair.rs  rollout.rs  sessions.rs  settings.rs  state_db.rs  stats.rs  webui.rs
src/components/: BackupCreateDialog.tsx  DangerDialog.tsx  EmptyState.tsx  FamilyHistorySheet.tsx  PageShell.tsx  PreviewDialog.tsx  ProjectGroup.tsx  ProviderIcon.tsx  SearchInput.tsx  SessionCard.tsx  SessionList.tsx  SettingsSheet.tsx  Sidebar.tsx  StatsDashboard.tsx  ThemeToggle.tsx  TopBar.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  sheet.tsx  sidebar.tsx  switch.tsx  tabs.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
src/hooks/: useBackups.ts  useHotkeys.ts  useSessions.ts
src/lib/: api.ts  clipboard.ts  cwd.ts  dialog.ts  format.ts  keyboard.ts  runtime.ts  sessionSource.ts  sessionText.ts
src/routes/: backup-detail.tsx  backups.tsx  repair.tsx  sessions.tsx  stats.tsx  transfer.tsx
src/stores/: provider.ts  selection.ts  settings.ts  theme.ts  view.ts
src/styles/: globals.css
