[package]
name = "cc-session-manager"
version = "0.2.6"
description = "CC Sessions"
authors = ["zjsmew"]
edition = "2021"

[lib]
name = "cc_session_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
