[package]
name = "codesync"
version = "0.4.0"
description = "CodeSync"
authors = ["Qiufeng"]
edition = "2021"
default-run = "codesync"

[lib]
name = "codesync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codesync"
path = "src/main.rs"
required-features = ["desktop"]

[[bin]]
name = "codesync-cli"
path = "src/bin/codesync-cli.rs"

[features]
default = ["desktop"]
desktop = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-clipboard-manager",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-fs",
]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-clipboard-manager = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
tiny_http = "0.12"
url = "2"
getrandom = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
